| Bug #27529 | Slave crashes on lots of updates | ||
|---|---|---|---|
| Submitted: | 29 Mar 2007 18:26 | Modified: | 10 Apr 2007 14:42 |
| Reporter: | Geert Vanderkelen | ||
| Status: | Closed | ||
| Category: | Server: ClusterRep | Severity: | S2 (Serious) |
| Version: | 5.1 + telco | OS: | Linux (Linux) |
| Assigned to: | Tomas Ulin | Target Version: | |
| Tags: | ndb, replication | ||
[29 Mar 2007 18:26]
Geert Vanderkelen
[29 Mar 2007 18:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/23339 ChangeSet@1.2451, 2007-03-29 18:42:00+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #27529: Slave crashes on lots of updates - do not try to perge binlog when purge comes from slave, it never purges binlog anyways
[5 Apr 2007 16:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/23901 ChangeSet@1.2131, 2007-04-05 16:15:27+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug#27529 Slave crashes on lots of updates - do not execute ndb purge for relay logs
[10 Apr 2007 14:42]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18, telco-6.1.16, and telco-6.2.1 changelogs.
