Bug #27529: Slave crashes on lots of updates - do not try to perge binlog when purge comes from slave, it never purges binlog anyways